--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "lib/main.js",
   "scripts": {
     "test": "node_modules/.bin/rackt test --single-run --browsers Firefox",
-    "start": "node_modules/.bin/rackt server"
+    "start": "node_modules/.bin/rackt server",
+    "build": "babel src --out-dir lib"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,13 @@
     "react-dom": "^0.14.0"
   },
   "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-core": "^6.7.0",
+    "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-plugin-transform-proto-to-assign": "^6.6.5",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "rackt-cli": "^0.5.3",
     "react": "^0.14.0",
     "react-dom": "^0.14.0"
